--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask Image Pyresearch Recognition</title>
+    <title>Image Pyresearch Recognition</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   </head>
   <body>
-    <h1>Flask Image Recognition</h1>
+    <h1>Image Recognition</h1>
     <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
       <input type="file" name="file" accept=".png, .jpg, .jpeg">
       <input type="submit" value="Upload">
