--- a/templates/results.html
+++ b/templates/results.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask Image Pyresearch Recognition Results</title>
+    <title>Image Pyresearch Recognition Results</title>
   </head>
   <body>
-    <h1>Flask Image Pyresearch Recognition Results</h1>
+    <h1>Image Pyresearch Recognition Results</h1>
     <p>Top 3 predicted results:</p>
     <ul>
       {% for result in results %}
